--- a/templates/order.html
+++ b/templates/order.html
@@ -59,7 +59,18 @@
                         <td><label for="number" name="number">{{o.customer_measurement.customer.number}}</label></td>
                         <td><label for="email" name="email">{{o.customer_measurement.customer.email}}</label></td>
                         <td><a href=""><label for="measurement" name="measurement">{{o.customer_measurement}}</label></a></td>
-                        <td><label for="status" name="status" class="bg-danger rounded-pill p-1">{{o.status}}</label></td>
+                        <td>
+                            <!-- <label for="status" name="status" class="bg-danger rounded-pill p-1">{{o.status}}</label> -->
+                            <!-- Example single danger button -->
+                                <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                Action
+                                </button>
+                                <ul class="dropdown-menu">
+                                <li><label for="Complete">Completed</label></li>
+                                <li><label for="Assigned">Assigned</label></li>
+                                <li><label for="Rejected">Rejected</label></li>
+                                </ul>
+                        </td>
                       </tr>
                 {% endfor%}
                 {% endif %}
