account ko status milako

--- a/templates/account.html
+++ b/templates/account.html
@@ -33,7 +33,15 @@
                         <td><label for="total" name="total">{{i.invoice.net_total}}</label></td>
                         <td><label for="advance" name="advance">{{i.advance}}</label></td>
                         <td><label for="remaning" name="remaining">{{i.remain}}</label></td>
-                        <td><label for="status" name="status">{{i.invoice.status}}</label></td>
+                        <td>
+                            <!-- <label for="status" name="status">{{i.invoice.status}}</label> -->
+                            <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                                <!-- <option selected>Open this select menu</option> -->
+                                <option value="1">Paid</option>
+                                <option value="2">Not Paid</option>
+                                <option value="3">Partially Paid</option>
+                              </select>
+                        </td>
                       </tr>
                     {% endfor %}
                 </tbody>
