--- a/templates/navside.html
+++ b/templates/navside.html
@@ -156,8 +156,8 @@
                             </div>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                            <li><a class="dropdown-item" href="#">Account History</a></li>
-                            <li><a class="dropdown-item" href="#">Order History</a></li>
+                            <li><a class="dropdown-item" href="historyacc">Account History</a></li>
+                            <li><a class="dropdown-item" href="historyorder">Order History</a></li>
                         </ul>
                     </li>
                     {% endif %}
