--- a/templates/historyacc.html
+++ b/templates/historyacc.html
@@ -15,7 +15,7 @@
                         <th class="th">Customer</th>
                         <th class="th">Employee Name</th>
                         <th class="th">Total</th>
-                        <th class="th">Advance</th>
+                        <th class="th">Advance Data</th>
                         <th class="th">Remaining</th>
                         <th class="th">Status</th>
                         <style>
@@ -34,16 +34,7 @@
                         <td><label for="assigned_emp" name="assigned_emp">{{i.invoice.order.employee}}</label></td>
                         <td><label for="total" name="total">{{i.invoice.net_total}}</label></td>
                         <td><label for="advance" name="advance">{{i.advance}}</label></td>
-                        <td><label for="remaning" name="remaining">{{i.remain}}</label></td>
-                        <td>
-                            <!-- <label for="status" name="status">{{i.invoice.status}}</label> -->
-                            <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                                <!-- <option selected>Open this select menu</option> -->
-                                <option value="1">Paid</option>
-                                <option value="2">Not Paid</option>
-                                <option value="3">Partially Paid</option>
-                              </select>
-                        </td>
+                        <td><label for="remaning" name="remaining">0</label></td>
                       </tr>
                     {% endfor %}
                 </tbody>
