--- a/templates/account.html
+++ b/templates/account.html
@@ -31,18 +31,16 @@
                         <th scope="row">1</th>
                         <td><a href="#"><label for="name" name="invoice">{{i.invoice.id}}</label></a></td>
                         <td><label for="cus_name" name="cus_name">{{i.invoice.order.customer_measurement.customer}}</label></td>
+                        {% if i.invoice.order.status == "Rejected" %}
+                        <td><label for="assigned_emp" name="assigned_emp">NA</label></td>
+                        {% else%}
                         <td><label for="assigned_emp" name="assigned_emp">{{i.invoice.order.employee}}</label></td>
+                        {% endif %}
                         <td><label for="total" name="total">{{i.invoice.net_total}}</label></td>
                         <td><label for="advance" name="advance">{{i.advance}}</label></td>
                         <td><label for="remaning" name="remaining">{{i.remain}}</label></td>
                         <td>
-                            <!-- <label for="status" name="status">{{i.invoice.status}}</label> -->
-                            <select class="form-select form-select-sm" aria-label=".form-select-sm example">
-                                <!-- <option selected>Open this select menu</option> -->
-                                <option value="1">Paid</option>
-                                <option value="2">Not Paid</option>
-                                <option value="3">Partially Paid</option>
-                              </select>
+                             <label for="status" name="status">{{i.invoice.status}}</label>
                         </td>
                       </tr>
                     {% endfor %}
