--- a/templates/acceptorder.html
+++ b/templates/acceptorder.html
@@ -26,7 +26,7 @@
                         <th class="th">Number</th>
                         <th class="th">Email</th>
                         <th class="th">Details</th>
-                        <th class="th">Acction</th>
+                        <th class="th">Action</th>
                         <style>
                             .th{
                                 text-align: left;
