--- a/templates/account.html
+++ b/templates/account.html
@@ -1,5 +1,14 @@
 {% extends 'navside.html'%}
 {% block content%}
+<style>
+        .borderNone{
+        border-top: none;
+        border-left: none;
+        border-right:none;
+        border-color: darkgrey;
+        margin-left: 12px;
+    }
+</style>
 <div class="container-fluid search_box">
     <form class="form-inline">
         <div class="row">
@@ -18,6 +27,7 @@
                         <th class="th">Advance</th>
                         <th class="th">Remaining</th>
                         <th class="th">Status</th>
+                        <th class="th"></th>
                         <style>
                             .th{
                                 text-align: left;
@@ -28,7 +38,7 @@
                 <tbody>
                     {% for i in invoice %}
                     <tr>
-                        <th scope="row">1</th>
+                        <th scope="row">{{forloop.counter}}</th>
                         <td><a href="#"><label for="name" name="invoice">{{i.invoice.id}}</label></a></td>
                         <td><label for="cus_name" name="cus_name">{{i.invoice.order.customer_measurement.customer}}</label></td>
                         {% if i.invoice.order.status == "Rejected" %}
@@ -41,6 +51,22 @@
                         <td><label for="remaning" name="remaining">{{i.remain}}</label></td>
                         <td>
                              <label for="status" name="status">{{i.invoice.status}}</label>
+                        </td>
+                        <td>
+                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample{{i.invoice.id}}" aria-expanded="false" aria-controls="collapseExample">
+                                Payment
+                                </button>
+                            <div class="collapse" id="collapseExample{{i.invoice.id}}">
+                                <div class="card card-body">
+                                    <div class="d-flex flex-column">
+                                    <div class="d-flex flex-row">
+                                        <label for="duePayment" class="fw-bold">Payment</label>
+                                        <input type="number" name="advance" id="advance" class="borderNone" min="0" value="0">
+                                    </div>
+                                    <div class="d-flex flex-row"></div><button class="btn btn-primary mt-3">Submit</button></div>
+                                </div>
+                                </div>
+                            </div>
                         </td>
                       </tr>
                     {% endfor %}
