--- a/templates/account.html
+++ b/templates/account.html
@@ -8,71 +8,89 @@
         border-color: darkgrey;
         margin-left: 12px;
     }
+
 </style>
 <div class="container-fluid search_box">
     <form class="form-inline">
         <div class="row">
-            <div class="col-10"><input class="form-control " type="search" placeholder="Search" aria-label="Search"></div>
-            <div class="col-2"><button class="btn btn-outline-success " type="submit">Search</button></div>
+            <div class="col-10"><input class="form-control " type="search" placeholder="Search" aria-label="Search">
+            </div>
+            <div class="col-2">
+                <button class="btn btn-outline-success " type="submit">Search</button>
+            </div>
         </div>
+    </form>
         <div class="row">
             <table class="table">
                 <thead class="thead-dark">
-                    <tr>
-                        <th class="th">#</th>
-                        <th class="th">Invoice</th>
-                        <th class="th">Customer</th>
-                        <th class="th">Employee Name</th>
-                        <th class="th">Total</th>
-                        <th class="th">Advance</th>
-                        <th class="th">Remaining</th>
-                        <th class="th">Status</th>
-                        <th class="th"></th>
-                        <style>
+                <tr>
+                    <th class="th">#</th>
+                    <th class="th">Invoice</th>
+                    <th class="th">Customer</th>
+                    <th class="th">Employee Name</th>
+                    <th class="th">Total</th>
+                    <th class="th">Advance</th>
+                    <th class="th">Remaining</th>
+                    <th class="th">Status</th>
+                    <th class="th"></th>
+                    <style>
                             .th{
                                 text-align: left;
                             }
-                        </style>
-                    </tr>
+
+                    </style>
+                </tr>
                 </thead>
                 <tbody>
-                    {% for i in invoice %}
-                    <tr>
-                        <th scope="row">{{forloop.counter}}</th>
-                        <td><a href="#"><label for="name" name="invoice">{{i.invoice.id}}</label></a></td>
-                        <td><label for="cus_name" name="cus_name">{{i.invoice.order.customer_measurement.customer}}</label></td>
-                        {% if i.invoice.order.status == "Rejected" %}
-                        <td><label for="assigned_emp" name="assigned_emp">NA</label></td>
-                        {% else%}
-                        <td><label for="assigned_emp" name="assigned_emp">{{i.invoice.order.employee}}</label></td>
-                        {% endif %}
-                        <td><label for="total" name="total">{{i.invoice.net_total}}</label></td>
-                        <td><label for="advance" name="advance">{{i.advance}}</label></td>
-                        <td><label for="remaning" name="remaining">{{i.remain}}</label></td>
-                        <td>
-                             <label for="status" name="status">{{i.invoice.status}}</label>
-                        </td>
-                        <td>
-                            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample{{i.invoice.id}}" aria-expanded="false" aria-controls="collapseExample">
-                                Payment
-                                </button>
-                            <div class="collapse" id="collapseExample{{i.invoice.id}}">
-                                <div class="card card-body">
-                                    <div class="d-flex flex-column">
+                {% for i in invoice %}
+                <tr>
+                    <th scope="row">{{forloop.counter}}</th>
+                    <td><a href="#"><label for="name" name="invoice">{{i.invoice.id}}</label></a></td>
+                    <td><label for="cus_name" name="cus_name">{{i.invoice.order.customer_measurement.customer}}</label>
+                    </td>
+                    {% if i.invoice.order.status == "Rejected" %}
+                    <td><label for="assigned_emp" name="assigned_emp">NA</label></td>
+                    {% else%}
+                    <td><label for="assigned_emp" name="assigned_emp">{{i.invoice.order.employee}}</label></td>
+                    {% endif %}
+                    <td><label for="total" name="total">{{i.invoice.net_total}}</label></td>
+                    <td><label for="advance" name="advance">{{i.advance}}</label></td>
+                    <td><label for="remaning" name="remaining">{{i.remain}}</label></td>
+                    <td>
+                        <label for="status" name="status">{{i.invoice.status}}</label>
+                    </td>
+                    {% if i.invoice.status != "Paid" %}
+                    <td>
+                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseExample{{i.invoice.id}}" aria-expanded="false"
+                                aria-controls="collapseExample">
+                            Payment
+                        </button>
+                        <div class="collapse" id="collapseExample{{i.invoice.id}}">
+                            <div class="card card-body">
+                                <div class="d-flex flex-column">
+                                    <form method="post" action="next_payment">
+                                        {% csrf_token %}
                                     <div class="d-flex flex-row">
                                         <label for="duePayment" class="fw-bold">Payment</label>
-                                        <input type="number" name="advance" id="advance" class="borderNone" min="0" value="0">
+                                        <input type="number" name="payment" id="advance" class="borderNone" min="0"
+                                               value="0">
+                                        <input type="hidden" name="invoice" class="borderNone" min="0"
+                                               value={{i.id}}>
                                     </div>
-                                    <div class="d-flex flex-row"></div><button class="btn btn-primary mt-3">Submit</button></div>
-                                </div>
+                                    <div class="d-flex flex-row">
+                                        <button class="btn btn-primary mt-3">Submit</button>
+                                    </div>
+                                    </form>
                                 </div>
                             </div>
-                        </td>
-                      </tr>
-                    {% endfor %}
+                        </div>
+                    </td>
+                    {% endif %}
+                </tr>
+                {% endfor %}
                 </tbody>
             </table>
         </div>
-      </form>
 </div>
 {%endblock%}
