--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -55,10 +55,10 @@
                 <div class="d-flex flex-row p-3">
                     <div class="flex-column ">
                         <div class="card-content">
-                            <h6>No. of Orders</h6>
+                            <h6>Total Earnings</h6>
                         </div>
                         <div class="card-txt">
-                            <label for="detail">901823</label>
+                            <label for="detail">Rs.{{earnings}}</label>
                         </div>
                     </div>
                     <div class="flex-column">
@@ -68,25 +68,7 @@
                 </div>
             </div>
             <!-- 3 end -->
-            <!-- 4 -->
-            <div class="col-3">
-                <div class="card">
-                <div class="d-flex flex-row p-3">
-                    <div class="flex-column ">
-                        <div class="card-content">
-                            <h6>No. of Orders</h6>
-                        </div>
-                        <div class="card-txt">
-                            <label for="detail">901823</label>
-                        </div>
-                    </div>
-                    <div class="flex-column">
-                        <img src="" alt="">
-                    </div>
-                </div>
-                </div>
-            </div>
-            <!-- 4 end -->
+
         </div>
     </section>
 </div>
