meaurement dekhney banako

--- a/templates/navside.html
+++ b/templates/navside.html
@@ -21,7 +21,7 @@
             <div class="sidebar-header">
                 <div class="sidebar-logo-container">
                     <div class="logo-container">
-                        <img class="logo-sidebar" src="assets/img/logo.png" />
+                        <!-- <img class="logo-sidebar" src="assets/img/logo.png" /> -->
                     </div>
                     <div class="brand-name-container">
                         <p class="brand-name">
@@ -144,7 +144,7 @@
                         </li>
                     {% endif %}
                     {% if not staff%}
-                    {% if history %}
+                    <!-- {% if history %}
                     <li class="navigation-list-item active">
                     {% else %}
                     <li class="navigation-list-item">
@@ -164,7 +164,7 @@
                             <li><a class="dropdown-item" href="historyorder">Order History</a></li>
                         </ul>
                     </li>
-                    {% endif %}
+                    {% endif %} -->
                 </ul>
                 <hr style="color:rgb(255, 255, 255);margin-top:30px;">
                 
