--- a/templates/billing.html
+++ b/templates/billing.html
@@ -68,12 +68,16 @@
                             <td><label for="VAT">13%</label></td>
                         </tr>
                         <tr>
+                            <th scope="row" colspan="2">Net Total</th>
+                            <td><input type="text" name="nettotal" value="0" class="borderNone " id="netTotal"  min="0"></td>
+                        </tr>
+                        <tr>
                             <th scope="row" colspan="2">Advance</th>
                             <td><input type="number" name="advance" id="advance" class="borderNone" min="0" value="0" onkeyup="calculateTotal();"></td>
                         </tr>
                         <tr>
-                            <th scope="row" colspan="2">Net Total</th>
-                            <td><input type="text" name="nettotal" value="0" class="borderNone " id="netTotal"  min="0"></td>
+                            <th scope="row" colspan="2">Remaining</th>
+                            <td><input type="text" name="nettotal" value="0" class="borderNone " id="Remaining"  min="0"></td>
                         </tr>
                     </tfoot>
                 </table>
@@ -139,6 +143,10 @@
                         <tr>
                             <th scope="row" colspan="2">Net Total</th>
                             <td><label class="borderNone">{{invoice.net_total}}</label></td>
+                        </tr>
+                        <tr>
+                            <th scope="row" colspan="2">Advance</th>
+                            <td><label class="borderNone">{{invoice.}}</label></td>
                         </tr>
                     </tfoot>
                 </table>
