--- a/templates/navside.html
+++ b/templates/navside.html
@@ -143,7 +143,7 @@
                             </a>
                         </li>
                     {% endif %}
-                    {% if not staff%}
+                    <!-- {% if not staff%} -->
                     <!-- {% if history %}
                     <li class="navigation-list-item active">
                     {% else %}
