--- a/templates/order.html
+++ b/templates/order.html
@@ -49,7 +49,7 @@
             {% if singlecus %}
             <tr>
                 <th scope="row">
-                    {{order.customer_measurement}}
+                    {{forloop.counter}}
                 </th>
                 <td><a href="#"><label for="name" name="name">{{order.customer_measurement.customer.name}}</label></a>
                 </td>
@@ -64,7 +64,7 @@
             {% else %}
             {% for o in order%}
             <tr>
-                <th scope="row">{{o.customer_measurement.customer.id}}</th>
+                <th scope="row">{{forloop.counter}}</th>
                 <td><a href="#"><label for="name" name="name">{{o.customer_measurement.customer.name}}</label></a></td>
                 {% if o.status == "Rejected" %}
                 <td>
@@ -86,7 +86,7 @@
                 <td><label for="number" name="number">{{o.customer_measurement.customer.number}}</label></td>
                 <td><label for="email" name="email">{{o.customer_measurement.customer.email}}</label></td>
                 <td>
-                    <button type="button" class="btn btn-primary" name="order" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{o.id}}" >{{o.customer_measurement}}</button>
+                    <button type="button" class="btn btn-primary btn-sm" name="order" data-bs-toggle="modal" data-bs-target="#staticBackdrop{{o.id}}" >{{o.customer_measurement}}</button>
                      <!-- Modal -->
                     <div class="modal fade" id="staticBackdrop{{o.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -165,9 +165,24 @@
                         </div>
                     </div>
                 </td>
+                {% if not staff %}
                 <td>
                     <label for="status" name="status">{{o.status}}</label>
                 </td>
+                {% else %}
+                 <td>
+                    <form action="toogleStatus" method="POST">
+                        {% csrf_token %}
+                        <div class="d-flex flex-row">
+                            <select class="form-select form-select-sm" aria-label=".form-select-sm example" name="status">
+                                <option value="Assigned">Assigned</option>
+                                <option value="Complete">Completed</option>
+                            </select>
+                            <button class="btn btn-primary btn-sm" style="margin-left:10px ;">Submit</button>
+                        </div>
+                    </form>
+                 </td>
+                {% endif %}
             </tr>
             {% endfor%}
             {% endif %}
